# Replicheck

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Project.md  README.md  cli.py  main.py  pyproject.toml  requirements.txt  setup.cfg
replicheck/: __init__.py  config.py  detector.py  parser.py  reporter.py  runner.py  tree_sitter_loader.py  utils.py
replicheck/tools/CyclomaticComplexity/: CCA.py  cs_utils.py  js_utils.py  py_utils.py
replicheck/tools/Duplication/: Duplication.py
replicheck/tools/LargeDetection/: LC.py  LF.py
replicheck/tools/TodoFixme/: TDFM.py
replicheck/tools/Unused/: Unused.py
replicheck/tools/bugNsafety/: BNS.py  utils_python.py
tests/: test_config.py  test_detector.py  test_main.py  test_parser.py  test_parser_extra.py  test_reporter.py  test_runner.py  test_utils.py
tests/BNS/: test_bns.py  test_utils.py
tests/LargeDetection/: test_LC.py  test_LF.py
tests/TodoFixme/: test_TDFM.py
tests/Unused/: test_Unused.py
utils/: helpers.js  helpers.py  package-lock.json  package.json
utils/C#/ComplexityAnalyzer/: BuildAndCompile.bash  ComplexityAnalyzer.csproj  Program.cs
