[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "replicheck"
version = "0.1.0"
authors = [
    { name = "Karar Haider", email = "kararhaider.pro@gmail.com" },
]
description = "A tool for detecting code duplications in projects"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm>=4.66.2"
]
keywords = ["duplicate-code", "code-analysis", "static-analysis", "refactoring", "python"]
urls = { Homepage = "https://github.com/kararhaider/replicheck", Repository = "https://github.com/kararhaider/replicheck" }

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "isort>=5.13.2",
]

[project.scripts]
replicheck = "replicheck.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=replicheck"
